# soce-technical-test-2023

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  main.py  models.py  pyproject.toml
backend/routers/: item.py  items.py
backend/schemas/: database.py  item.py
backend/services/: README.md
backend/store/: datastore.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/nginx/: default.conf
frontend/src/: App.vue  constants.ts  style.css
frontend/src/components/: Body.vue  Header.vue
frontend/src/composables/: useBodyComponent.ts  useItem.ts  useItems.ts
frontend/src/services/: index.ts
frontend/src/views/: Admin.vue  Shop.vue
frontend/src/views/Admin/: CurrentItemForm.vue  Index.vue  NewItemForm.vue
src/: constants.py  database.py  enums.py  logs.py  main.py  models.py
src/routers/: item.py  items.py  user.py
src/schemas/: item.py  user.py
src/scripts/: get_data.py
src/store/: datastore.py
src/utils/: hashing.py  token.py
