[tool.poetry]
name = "soce-technical-test-2023"
version = "0.1.0"
description = ""
authors = ["roycehoe <royceinbox@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = "^0.95.1"
SQLAlchemy = "^2.0.9"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
loguru = "^0.7.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
